--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ anyhow = "1.0.98"
 bit-vec = "0.8"
 blake3 = "1.8.2"
 bytes = "1.10.1"
+chrono = { version = "0.4", features = ["serde"] }
 clap = { version = "4.5.41", features = ["derive"] }
 clap-verbosity-flag = "3.0.3"
 dashmap = "6.1.0"
