--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ blake3 = "1.8.2"
 bytes = "1.10.1"
 chrono = { version = "0.4", features = ["serde"] }
 clap = { version = "4.5.41", features = ["derive"] }
+clap_complete = "4.5"
 clap-verbosity-flag = "3.0.3"
 dashmap = "6.1.0"
 dotenvy = "0.15.7"
@@ -29,6 +30,11 @@ indicatif = "=0.17.11"
 indicatif-log-bridge = "0.2.3"
 json5 = "0.4.1"
 log = "0.4.27"
+miette = { version = "7.0", features = ["fancy"] }
+num_cpus = "1.16"
+owo-colors = "4.0"
+oxipng = { version = "9.1", default-features = false, features = ["parallel", "zopfli"] }
+rayon = "1.10"
 rbx_binary = { version = "1.0.0", features = ["serde"] }
 rbx_cookie = { version = "0.1.5", default-features = false }
 rbx_xml = "1.0.0"
