feat(pack): Add animated spritesheet packing
This commit introduces support for packing animated spritesheets from sequential image frames. Asphalt can now detect frame sequences (e.g., 'walk_01.png', 'walk_02.png') using a configurable regex pattern. These frames are combined into a single atlas strip, and the generated code includes runtime metadata for playback, such as frame rectangles, duration, and looping behavior.

To accommodate this feature, the configuration for sprite packing has been refactored. The previous flat structure is now explicitly defined under a `type = "static"` mode. A new `type = "animated"` mode is introduced for animation-specific settings.

To ease the transition, a new `asphalt convert` command is included. This command automatically migrates existing configuration files to the new format.

BREAKING CHANGE: The configuration schema for `[inputs.<name>.pack]` has been updated. Packing options are now organized under a `type` discriminator, which can be "static" or "animated". Run `asphalt convert` to migrate your configuration.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ license = "MIT"
 name = "asphalt"
 readme = "README.md"
 repository = "https://github.com/jacktabscode/asphalt"
-version = "1.3.3"
+version = "2.0.0"
 
 [dependencies]
 anyhow = "1.0.98"
@@ -37,6 +37,7 @@ oxipng = { version = "9.1", default-features = false, features = ["parallel", "z
 rbx_binary = { version = "1.0.0", features = ["serde"] }
 rbx_cookie = { version = "0.1.5", default-features = false }
 rbx_xml = "1.0.0"
+regex = "1.12.2"
 reqwest = { version = "0.12.22", default-features = false, features = ["rustls-tls", "gzip", "multipart"] }
 resvg = "0.45.1"
 roblox_install = "1.0.0"
@@ -56,7 +57,10 @@ inherits = "release"
 lto = "thin"
 
 [dev-dependencies]
+assert_cmd = "2.0"
 insta = { version = "1.43.1", features = ["yaml"] }
+predicates = "3.0"
+tempfile = "3.8"
 
 [profile.dev.package]
 insta.opt-level = 3
