--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,13 +1,13 @@
 [package]
-name = "asphalt"
-version = "1.4.0"
-edition = "2024"
-description = "Upload and reference Roblox assets in code"
-readme = "README.md"
-homepage = "https://github.com/jacktabscode/asphalt"
-repository = "https://github.com/jacktabscode/asphalt"
-license = "MIT"
 authors = ["Jack Taylor <j@jackt.io>"]
+description = "Upload and reference Roblox assets in code"
+edition = "2024"
+homepage = "https://github.com/jacktabscode/asphalt"
+license = "MIT"
+name = "asphalt"
+readme = "README.md"
+repository = "https://github.com/jacktabscode/asphalt"
+version = "1.4.0"
 
 [dependencies]
 anyhow = "1.0.100"
@@ -38,11 +38,7 @@ rbx_binary = { version = "2.0.0", features = ["serde"] }
 rbx_cookie = { version = "0.1.5", default-features = false }
 rbx_xml = "2.0.0"
 relative-path = { version = "2.0.1", features = ["serde"] }
-reqwest = { version = "0.12.24", default-features = false, features = [
-  "gzip",
-  "multipart",
-  "rustls-tls",
-] }
+reqwest = { version = "0.12.24", default-features = false, features = ["gzip", "multipart", "rustls-tls"] }
 resvg = "0.45.1"
 roblox_install = "1.0.0"
 schemars = { version = "1.0.4", features = ["derive"] }
