--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -126,6 +126,13 @@ jobs:
             curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y
             echo "$HOME/.cargo/bin" >> $GITHUB_PATH
           fi
+      - name: "Install sccache"
+        uses: "mozilla-actions/sccache-action@v0.0.9"
+      - name: "Configure sccache for macOS builds"
+        if: "${{ runner.os == 'macOS' }}"
+        run: |
+          echo "SCCACHE_GHA_ENABLED=true" >> $GITHUB_ENV
+          echo "RUSTC_WRAPPER=sccache" >> $GITHUB_ENV
       - name: Install dist
         run: ${{ matrix.install_dist.run }}
       # Get the dist-manifest
