--- a/dist-workspace.toml
+++ b/dist-workspace.toml
@@ -7,6 +7,8 @@ members = ["cargo:."]
 cargo-dist-version = "0.30.2"
 # CI backends to support
 ci = "github"
+# Custom build setup for GitHub Actions (sccache integration)
+github-build-setup = "_sccache-setup.yml"
 # The installers to generate for each app
 installers = []
 # Target platforms to build apps for (Rust target-triple syntax)
